k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: radio
  labels:
    namespace: radio
