k8s/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-server
spec:
  selector:
    matchLabels:
      app: radio-server
  template:
    metadata:
      labels:
        app: radio-server
    spec:
      # Pod-level security context
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: radio-server
          image: shokohsc/radio-server
          # Container-level security context
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /health
          resources:
            requests:
              cpu: 100m
              memory: 64M
            limits:
              cpu: 1000m
              memory: 128M
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: radio-ui
spec:
  selector:
    matchLabels:
      app: radio-ui
  template:
    metadata:
      labels:
        app: radio-ui
    spec:
      # Pod-level security context
      securityContext:
        runAsNonRoot: true
        runAsUser: 101  # nginx default user
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: radio-ui
          image: shokohsc/radio-ui
          # Container-level security context
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE  # needed for binding to port 80
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
